  * (improvement) show some of the sample information at the instrument level
  * (improvement) keys and key ranges can be edited with a midi keyboard in the table
  * (improvement) drag & drop of divisions in the tree can create instruments and presets
  * (improvement) drag & drop in the tree can duplicate elements within instruments and presets
  * (fix) several modulators can target the same modulator
  * (fix) bug when exporting several WAV files
  * (fix) monitoring tool was not working
  * (fix) small GUI issues

 -- Davy Triponney <davy.triponney@gmail.com>


polyphone (2.0) UNRELEASED; urgency=low

  * (new) software design
  * (new) access to the soundfont repository with a Premium account
  * (new) duplication of elements in the tree
  * (new) fast creation of instruments or presets with a drag & drop in the tree
  * (new) possibility to mute divisions for testing purposes
  * (new) tool for creating chords
  * (new) German and Danish translations
  * (improvement) support for "control", "include", "default_path", "global", "group_label", "define" when importing sfz files
  * (improvement) sample rate displayed in the sample overview page
  * (improvement) navigation between linked elements
  * (improvement) divisions can be sorted in different ways
  * (improvement) preset and bank numbers can be changed in a multiple selection
  * (improvement) faster loading of soundfonts
  * (fix) bug when saving or loading 24-bit samples
  * (fix) opening big soundfonts

 -- Davy Triponney <davy.triponney@gmail.com>  Fri, 14 Dec 2018 22:15:09 +0100


polyphone (1.9) UNRELEASED; urgency=low

  * (new) soundfont repository online
  * (new) graphical envelop editor
  * (new) Portuguese & Chinese translations
  * (new) tool to export the preset list in a text format
  * (improvement) table cells linked to a modulator have a thicker border
  * (improvement) highlight a modulator corresponding to a cell and vice versa