@@ -36,8 +36,8 @@ class DialogKeyboard : public QDialog
     Q_OBJECT
 
 public:
-    explicit DialogKeyboard(QWidget *parent = 0);
-    ~DialogKeyboard();
+    explicit DialogKeyboard(QWidget *parent = nullptr);
+    ~DialogKeyboard() override;
 
     // Focus on the keyboard and animate with a glow effect
     void glow();
